// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertContext should render alert 1`] = `
<div>
  <div
    class="alert alert-dismissible alert-danger"
  >
    <button
      class="close"
      type="button"
    >
      ×
    </button>
    Alert content
  </div>
  <button>
    Set alert
  </button>
</div>
`;

exports[`AlertContext should render component without alert 1`] = `
<div>
  <button>
    Set alert
  </button>
</div>
`;
